# climatesense-kg

./: .bandit  .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  justfile  mypy.ini  pyproject.toml
apps/analytics-ui/: .prettierrc.js  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
apps/analytics-ui/app/: globals.css  layout.tsx
apps/analytics-ui/app/dashboard/: page.tsx
apps/analytics-ui/app/knowledge-graph/: page.tsx
apps/analytics-ui/components/charts/: metric-progress.tsx  stacked-bar.tsx
apps/analytics-ui/lib/: api-client.ts  hooks.ts  utils.ts
config/: daily.yaml  minimal.yaml
docker/: .env.example  Dockerfile  analytics-api.Dockerfile  docker-compose.yml
docker/isql-service/: Dockerfile  requirements.txt
docker/isql-service/src/: server.py
docker/virtuoso/initdb.d/: 01-prefixes.sql  02-vhosts.sql  03-fct.sql
docs/: URI-patterns.md
samples/claimreviewdata-data/: claim_reviews.json
samples/euroclimatecheck-data/: all_articles.json
services/analytics_api/: README.md  config.py  db.py  main.py
services/analytics_api/queries/kg/: claim_factors_distribution.rq  class_distribution.rq  core_counts.rq  enrichment_coverage.rq  entity_types.rq  provenance_completeness.rq  triple_volume.rq
services/analytics_api/queries/pipeline/: enrichers_domain_failures.sql  enrichers_error_types.sql  enrichers_recent_activity.sql  enrichers_success_rate.sql
services/analytics_api/routers/: __init__.py  cache.py  kg.py  pipeline.py
services/analytics_api/schemas/: kg.py  pipeline.py
services/analytics_api/scripts/: refresh_cache.py
services/analytics_api/services/: sparql.py  sql.py
src/climatesense_kg/: __init__.py  cli.py  data_manager.py  pipeline.py
src/climatesense_kg/cache/: __init__.py  interface.py  postgres_cache.py  redis_cache.py
src/climatesense_kg/config/: __init__.py  config.py  models.py  schemas.py
src/climatesense_kg/deployment/: __init__.py  base.py  virtuoso.py
src/climatesense_kg/enrichers/: __init__.py  base.py  bert_factors_enricher.py  composite_enricher.py  dbpedia_enricher.py  dbpedia_property_enricher.py  url_text_enricher.py
src/climatesense_kg/processors/: __init__.py  base.py  claimreviewdata.py  climafacts.py  climatefever.py  dbkf.py  defacto.py  desmog.py  euroclimatecheck.py  misinfome.py
src/climatesense_kg/providers/: __init__.py  base.py  file.py  github.py  graphql.py  http.py  xwiki.py
src/climatesense_kg/rdf_generation/: __init__.py  generator.py
src/climatesense_kg/utils/: __init__.py  data_cache.py  logging.py  ratings.py  text_processing.py  uri_cache.py
tests/: __init__.py  conftest.py
tests/enrichers/: __init__.py  test_bert_factors_enricher.py  test_dbpedia_enricher.py  test_dbpedia_property_enricher.py  test_url_text_enricher.py
tests/rdf_generation/: test_generator.py
tests/utils/: test_ratings.py  test_text_processing.py
